--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ html {
 /* Estilos de header */
 .header {
     width: 100vw;
-    height: 10vh;
+    height: 17vh;
     display: flex;
     align-items: flex-end;
 }
@@ -255,13 +255,13 @@ html {
 /* Comienza diseño de app */
 .app {
     width: 100%;
-    height: 109px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--cultured);
     color: var(--davys-grey);
     font-size: 1.3rem;
+    margin-bottom: 50px;
 }
 
 .app__download {
@@ -289,13 +289,44 @@ html {
 .app__info {
     text-align: center;
     margin: 0 10px 15px 10px ;
+    line-height: 1.5;
 }
 
 .app__stores {
     display: flex;
-    list-style: none;
+    width: auto;
+    height: 50px;
 }
 
 .app__icon {
     margin-right: 10px;
+}
+
+/* Comienza diseño de footer */
+.footer {
+    width: 100%;
+    height: 60px;
+    line-height: 1.5;
+    font-size: 1.3rem;
+    text-align: center;
+    color: var(--davys-grey);
+    display: flex;
+    align-items:center;
+}
+
+.footer__link {
+    text-decoration: none;
+}
+
+.footer__link2 {
+    text-decoration: none;
+}
+
+.footer__link::after {
+    content: "\2022";
+    display: inline-block;
+    line-height: inherit;
+    margin-left: 0.8rem;
+    margin-right: 0.5rem;
+    color: var(--davys-grey);
 }
